Closed Bug 1331849 Opened 8 years ago Closed 8 years ago

Fix some wrong use of NS_NewNativeLocalFile in dom

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- wontfix
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: baku, Assigned: baku)

References

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → amarchesini
Attachment #8827744 - Flags: review?(bugs)
Comment on attachment 8827744 [details] [diff] [review] fileSystem2.patch Do we need this in aurora/beta too? That other bug definitely, so possibly also this? Is this tested on Windows with non-ascii folders and file names?
Attachment #8827744 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/5cf462d962ce Replace NS_NewNativeLocalFile with NS_NewLocalFile in dom, r=smaug
Comment on attachment 8827744 [details] [diff] [review] fileSystem2.patch Approval Request Comment [Feature/Bug causing the regression]: Directory upload API, mainly. [User impact if declined]: on windows, if a directory is called with a non-ascii name, that name can be wrongly encoded. [Is this code covered by automated tests?]: none [Has the fix been verified in Nightly?]: not yet [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: We use a similar method but avoiding the double encoding. [String changes made/needed]: none
Attachment #8827744 - Flags: approval-mozilla-beta?
Attachment #8827744 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8827744 [details] [diff] [review] fileSystem2.patch It's too late for 51 as we've built 51 RC2. Mark 51 won't fix and Beta51-. We can take this in Aurora52. Aurora52+.
Attachment #8827744 - Flags: approval-mozilla-beta?
Attachment #8827744 - Flags: approval-mozilla-beta-
Attachment #8827744 - Flags: approval-mozilla-aurora?
Attachment #8827744 - Flags: approval-mozilla-aurora+
Blocks: 1331820
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: