Bug 1331849 - Replace NS_NewNativeLocalFile with NS_NewLocalFile in dom. r=smaug, a=jcristau